--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
       <div class="ban-contant h-100 d-flex align-items-center">
         <div class="container">
           <div class="row">
-            <div class="col-lg-9 col-md-9 col-sm-9 m-auto">
+            <div class="col-lg-9 m-auto">
               <div class="ban-text text-center">
                 <h2>Creative Template</h2>
                 <h1>Welcome to MoGo</h1>
